# db_soci_orm_cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
empty/: CMakeLists.txt
sqlite3/: CMakeLists.txt
src/: main.cpp
test/: CMakeLists.txt
test/empty/: CMakeLists.txt  empty.test.cpp
test/mysql/: CMakeLists.txt  mysql.test.cpp
test/none/: CMakeLists.txt  none.test.cpp
test/odbc/: CMakeLists.txt  odbc.test.cpp
test/postgresql/: CMakeLists.txt  postgresql.test.cpp
test/sqlite3/: CMakeLists.txt  sqlite3.test.cpp
